--- a/app.jade
+++ b/app.jade
@@ -22,8 +22,8 @@ html(lang='en', ng-app='appmodule', ng-controller='appCtr')
   body(ng-controller='userCtr')
     // .control_panel(ng-controller='controlPanelCtr', jq-draggable='jq-draggable')
     //   button(ng-click='receiveFdbk()') Receive Fdbk!
-    .dimmer(ng-click='toggleSidebar()', ng-class='{visible: sidebar_visible == true, in_frame: sidebar_inFrame == true}')
     .main_wrapper
+      .dimmer.main_dimmer(ng-click='toggleSidebar()', ng-if='sidebar_visible')
       main.main_view(ng-class='{slide_right : sidebar_visible}', ui-view)
     nav.main_nav.sidebar
       .personal_pages.bounceInDown.animated(ng-class='{visible: personal_pages_visible == true}')
@@ -57,5 +57,6 @@ html(lang='en', ng-app='appmodule', ng-controller='appCtr')
     script(src='js/angular/appControllers.js', type='text/javascript')
     script(src='js/angular/appDirectives.js', type='text/javascript')
     script(src='js/angular/appFactories.js', type='text/javascript')
+    script(src='js/angular/directives/angular-animate.js', type='text/javascript')
     script(src='js/angular/directives/ui-sortable.js', type='text/javascript')
     script(src='js/angular/directives/ui-router_0.2.js', type='text/javascript')
