--- a/css/app.css
+++ b/css/app.css
@@ -49,156 +49,41 @@ dd:after {
 /* @group Dimmer animation */
 
 .dimmer {
-  width: 0;
+  width: 100%;
   height: 100%;
   position: absolute;
   
   z-index: 1000;
-  left: 0;
   top: 0;
-  background-color: rgba(0, 0, 0, 0);
-  
-  -webkit-transition: background-color 200ms ease-in-out;
-  -moz-transition: background-color 200ms ease-in-out;
-  -ms-transition: background-color 200ms ease-in-out;
-  -o-transition: background-color 200ms ease-in-out;
-  transition: background-color 200ms ease-in-out;
-}
-
-.dimmer.inFrame {
-  width: 100%;
-}
-
-.visible {
+  left: 80%;
   background-color: rgba(0, 0, 0, 0.21);
-  width: 100%;
 }
 
-.fade-show,
-.fade-hide {
--webkit-transition: 200ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
--moz-transition: 200ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
--ms-transition: 200ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
--o-transition: 200ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
-transition: 200ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
-}
- 
-.fade-hide.fade-hide-active,
-.fade-show {
-opacity: 0;
-}
- 
-.fade-show.fade-show-active,
-.fade-hide {
-opacity: 1;
+.dimmer.ng-enter,
+.dimmer.ng-leave {
+  -webkit-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  -moz-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  -ms-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  -o-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
 }
 
-
-.collapse-enter, 
-.collapse-leave, .collapse-show, 
-.collapse-hide { 
-	-webkit-transition: 200ms ease all;
-	-moz-transition: 200ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
-	-ms-transition: 200ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
-	-o-transition: 200ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
-	transition: 200ms ease all;
-  display: block;
-} 
-
-.collapse-leave.collapse-leave-active,
-.collapse-enter, .collapse-hide.collapse-hide-active,
-.collapse-show {
-  opacity: 0;
-  max-height: 0px;
+.dimmer.ng-enter,
+.dimmer.ng-leave.ng-leave-active {
+  opacity:0;
+  left: 0;
+}
+.dimmer.ng-leave,
+.dimmer.ng-enter.ng-enter-active {
+  opacity:1;
+  left: 80%;
 }
 
-.collapse-enter.collapse-enter-active,
-.collapse-leave, .collapse-show.collapse-show-active,
-.collapse-hide {
-  opacity: 1;
-  max-height: 300px;
-}
 
 /* @end */
 
-.slide-enter,
-.slide-leave {
-  -webkit-transition: 400ms ease-in all;
-  -moz-transition: 400ms ease-in all;
-  -ms-transition: 400ms ease-in all;
-  -o-transition: 400ms ease-in all;
-  transition: 400ms ease-in all;
-  position: absolute;
-  width: 100%;
-}
- 
-.slide-leave.slide-leave-active,
-.slide-enter {
-
-}
- 
-.slide-enter.slide-enter-active,
-.slide-leave {
-
-}
-
-
-
-.slide-enter {
-  left: 100%;
-}
-
-.slide-leave.layer0 {
-  left: 0;
-}
-
-.slide-enter.layer0 {
-  left: 0;
-  -webkit-transform: scale(.8);
-  -moz-transform: scale(.8);
-}
-
-.slide-enter-active.layer0 {
-  -webkit-transform: scale(1);
-  -moz-transform: scale(1);
-  left: 0;
-  
-}
-
-.slide-enter-active {
-  left: 0;
-}
-
-.slide-leave {
-  left: 100%;
-  -webkit-transform: scale(1);
-  -moz-transform: scale(1);
-}
-
-.slide-leave-active {
-  -webkit-transform: scale(.8);
-  -moz-transform: scale(.8);
-}
-
-.slide-leave.layer1 {
-  left: 100%;
-  z-index: 100;
-  -webkit-transform: scale(1);
-  -moz-transform: scale(1);
-}
-
-.layer1 {
-  z-index: 100;
-}
-
-.focus {
-  -webkit-transform: translateX(0%);.
-  -moz-transform: translateX(0%);
-  opacity: 1;
-}
-
 .scroller_wrapper.with_breadcrumb_padding {
-  padding-top: 6em;
+  padding-top: 3em;
   padding-bottom: 0em;
 }
 
@@ -211,6 +96,14 @@ opacity: 1;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.22);
   border-left: 1px solid #cccdcc;
   
+  -webkit-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  -moz-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  -ms-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  -o-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+}
+
+.main_wrapper {
   -webkit-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
   -moz-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
   -ms-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
@@ -1240,8 +1133,10 @@ fieldset.padded {
   display: block;
   margin: .3em 0;
   position: absolute;
-  top: 3em;
+  top: 2.7em;
   z-index: 100;
+  background-color: #ffffff;
+  border-bottom: 1px solid #cbcccb;
 }
 
 .breadcrumbs > * {
@@ -1436,9 +1331,15 @@ textarea {
 }
 
 .slide_right {
-  -webkit-transform: translateX(80%) scale(1.1);
-  -moz-transform: translateX(80%) scale(1.1);
-  transform: translateX(80%) scale(1.1);
+  -webkit-transform: translateX(80%);
+  -moz-transform: translateX(80%);
+  transform: translateX(80%);
+  
+  -webkit-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  -moz-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  -ms-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  -o-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
 }
 
 
@@ -2030,10 +1931,6 @@ input.object-list-search:focus {
     -moz-transform: none;
     -webkit-transform: none;
     box-shadow: none;
-  }
-  
-  .slide_right .dimmer.visible {
-    display: none;
   }
   
   .sidebar, .sidebar li {
