moved the main dimmer inside the account view. keeps it moving with the main view, and doesn't mess with the layout.

--- a/partials/account.html
+++ b/partials/account.html
@@ -1,2 +1,3 @@
 
 <ui-view class="account_view"></ui-view>
+<div ng-click="toggleSidebar()" ng-if="sidebar_visible" class="dimmer main_dimmer"></div>
